// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts to api reference node 1`] = `
{
  "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
  "availability": undefined,
  "changelog": undefined,
  "children": [
    {
      "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
      "availability": undefined,
      "children": [
        {
          "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
          "availability": undefined,
          "endpointId": "endpoint_imdb.deleteMovie",
          "hidden": undefined,
          "icon": undefined,
          "id": "550e8400-e29b-41d4-a716-446655440000.deleteMovie",
          "isResponseStream": false,
          "method": "DELETE",
          "playground": undefined,
          "slug": "base/path/api-reference/testing/delete-movie",
          "title": "Delete Movie",
          "type": "endpoint",
        },
        {
          "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
          "availability": undefined,
          "endpointId": "endpoint_imdb.getMovie",
          "hidden": undefined,
          "icon": undefined,
          "id": "550e8400-e29b-41d4-a716-446655440000.getMovie",
          "isResponseStream": false,
          "method": "GET",
          "playground": undefined,
          "slug": "base/path/api-reference/testing/get-movie",
          "title": "Get Movie",
          "type": "endpoint",
        },
      ],
      "hidden": undefined,
      "icon": undefined,
      "id": "550e8400-e29b-41d4-a716-446655440000.testing",
      "noindex": undefined,
      "overviewPageId": undefined,
      "playground": undefined,
      "pointsTo": "base/path/api-reference/testing/delete-movie",
      "slug": "base/path/api-reference/testing",
      "title": "Testing",
      "type": "apiPackage",
    },
    {
      "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
      "availability": undefined,
      "children": [
        {
          "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
          "availability": undefined,
          "children": [
            {
              "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
              "availability": undefined,
              "endpointId": "endpoint_trailers.createTrailer",
              "hidden": undefined,
              "icon": undefined,
              "id": "550e8400-e29b-41d4-a716-446655440000:endpoint_trailers.createTrailer",
              "isResponseStream": false,
              "method": "POST",
              "playground": undefined,
              "slug": "base/path/api-reference/imdb/trailers/create-trailer",
              "title": "Create Trailer",
              "type": "endpoint",
            },
            {
              "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
              "availability": undefined,
              "endpointId": "endpoint_trailers.getTrailer",
              "hidden": undefined,
              "icon": undefined,
              "id": "550e8400-e29b-41d4-a716-446655440000:endpoint_trailers.getTrailer",
              "isResponseStream": false,
              "method": "GET",
              "playground": undefined,
              "slug": "base/path/api-reference/imdb/trailers/get-trailer",
              "title": "Get Trailer",
              "type": "endpoint",
            },
            {
              "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
              "availability": undefined,
              "endpointId": "endpoint_trailers.getTrailerForMovie",
              "hidden": undefined,
              "icon": undefined,
              "id": "550e8400-e29b-41d4-a716-446655440000:endpoint_trailers.getTrailerForMovie",
              "isResponseStream": false,
              "method": "GET",
              "playground": undefined,
              "slug": "base/path/api-reference/imdb/trailers/get-trailer-for-movie",
              "title": "Get Trailer For Movie",
              "type": "endpoint",
            },
            {
              "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
              "availability": undefined,
              "endpointId": "endpoint_trailers.deleteTrailer",
              "hidden": undefined,
              "icon": undefined,
              "id": "550e8400-e29b-41d4-a716-446655440000:endpoint_trailers.deleteTrailer",
              "isResponseStream": false,
              "method": "DELETE",
              "playground": undefined,
              "slug": "base/path/api-reference/imdb/trailers/delete-trailer",
              "title": "Delete Trailer",
              "type": "endpoint",
            },
          ],
          "hidden": undefined,
          "icon": undefined,
          "id": "550e8400-e29b-41d4-a716-446655440000.subpackage_imdb.subpackage_trailers",
          "noindex": undefined,
          "overviewPageId": undefined,
          "playground": undefined,
          "pointsTo": "base/path/api-reference/imdb/trailers/create-trailer",
          "slug": "base/path/api-reference/imdb/trailers",
          "title": "Trailers",
          "type": "apiPackage",
        },
        {
          "apiDefinitionId": "550e8400-e29b-41d4-a716-446655440000",
          "availability": undefined,
          "endpointId": "endpoint_imdb.createMovie",
          "hidden": undefined,
          "icon": undefined,
          "id": "550e8400-e29b-41d4-a716-446655440000:endpoint_imdb.createMovie",
          "isResponseStream": false,
          "method": "POST",
          "playground": undefined,
          "slug": "base/path/api-reference/imdb/create-movie",
          "title": "Create Movie",
          "type": "endpoint",
        },
      ],
      "hidden": undefined,
      "icon": undefined,
      "id": "550e8400-e29b-41d4-a716-446655440000.subpackage_imdb",
      "noindex": undefined,
      "overviewPageId": undefined,
      "playground": undefined,
      "pointsTo": "base/path/api-reference/imdb/trailers/create-trailer",
      "slug": "base/path/api-reference/imdb",
      "title": "Imdb",
      "type": "apiPackage",
    },
  ],
  "hidden": undefined,
  "hideTitle": false,
  "icon": undefined,
  "id": "550e8400-e29b-41d4-a716-446655440000",
  "noindex": undefined,
  "overviewPageId": undefined,
  "paginated": false,
  "playground": undefined,
  "pointsTo": "base/path/api-reference/testing/delete-movie",
  "showErrors": false,
  "slug": "base/path/api-reference",
  "title": "API Reference",
  "type": "apiReference",
}
`;

exports[`converts to api reference node: DELETE /movies/{id} 1`] = `
{
  "authed": false,
  "availability": undefined,
  "defaultEnvironment": undefined,
  "description": "Remove a movie from the database based on the ID",
  "environments": [],
  "errors": [],
  "errorsV2": [],
  "examples": [
    {
      "codeExamples": {
        "goSdk": undefined,
        "nodeAxios": "",
        "pythonSdk": undefined,
        "rubySdk": undefined,
        "typescriptSdk": undefined,
      },
      "codeSamples": [],
      "description": undefined,
      "headers": {},
      "name": undefined,
      "path": "/movies/:id",
      "pathParameters": {
        "id": ":id",
      },
      "queryParameters": {},
      "requestBody": undefined,
      "requestBodyV3": undefined,
      "responseBody": undefined,
      "responseBodyV3": undefined,
      "responseStatusCode": 200,
    },
  ],
  "headers": [],
  "id": "deleteMovie",
  "method": "DELETE",
  "migratedFromUrlSlugs": undefined,
  "name": "Delete Movie",
  "originalEndpointId": "endpoint_imdb.deleteMovie",
  "path": {
    "parts": [
      {
        "type": "literal",
        "value": "/movies",
      },
      {
        "type": "literal",
        "value": "/",
      },
      {
        "type": "pathParameter",
        "value": "id",
      },
      {
        "type": "literal",
        "value": "",
      },
    ],
    "pathParameters": [
      {
        "description": undefined,
        "key": "id",
        "type": {
          "type": "id",
          "value": "type_imdb:MovieId",
        },
      },
    ],
  },
  "queryParameters": [],
  "request": undefined,
  "response": undefined,
  "snippetTemplates": undefined,
  "urlSlug": "delete-movie",
}
`;

exports[`converts to api reference node: endpointsByLocator keys 1`] = `
[
  "POST /movies/create-movie",
  "GET /movies/{id}",
  "GET /movies/:id",
  "DELETE /movies/{id}",
  "DELETE /movies/:id",
  "POST /trailers/create",
  "GET /trailers/{id}",
  "GET /trailers/:id",
  "GET /trailers/movie/{id}",
  "GET /trailers/movie/:id",
  "DELETE /trailers/{id}",
  "DELETE /trailers/:id",
  "imdb.createMovie",
  "imdb/createMovie",
  "imdb.getMovie",
  "imdb/getMovie",
  "imdb.deleteMovie",
  "imdb/deleteMovie",
  "trailers.createTrailer",
  "trailers/createTrailer",
  "trailers.getTrailer",
  "trailers/getTrailer",
  "trailers.getTrailerForMovie",
  "trailers/getTrailerForMovie",
  "trailers.deleteTrailer",
  "trailers/deleteTrailer",
]
`;

exports[`converts to api reference node: imdb.getMovie 1`] = `
{
  "authed": false,
  "availability": undefined,
  "defaultEnvironment": undefined,
  "description": "Retrieve a movie from the database based on the ID",
  "environments": [],
  "errors": [],
  "errorsV2": [
    {
      "description": undefined,
      "examples": [],
      "name": undefined,
      "statusCode": 404,
      "type": {
        "type": "alias",
        "value": {
          "type": "id",
          "value": "type_imdb:MovieId",
        },
      },
    },
  ],
  "examples": [
    {
      "codeExamples": {
        "goSdk": undefined,
        "nodeAxios": "",
        "pythonSdk": undefined,
        "rubySdk": undefined,
        "typescriptSdk": undefined,
      },
      "codeSamples": [],
      "description": undefined,
      "headers": {},
      "name": undefined,
      "path": "/movies/tt0111161",
      "pathParameters": {
        "id": "tt0111161",
      },
      "queryParameters": {},
      "requestBody": undefined,
      "requestBodyV3": undefined,
      "responseBody": {
        "id": "tt0111161",
        "rating": 9.3,
        "title": "The Shawshank Redemption",
      },
      "responseBodyV3": {
        "type": "json",
        "value": {
          "id": "tt0111161",
          "rating": 9.3,
          "title": "The Shawshank Redemption",
        },
      },
      "responseStatusCode": 200,
    },
    {
      "codeExamples": {
        "goSdk": undefined,
        "nodeAxios": "",
        "pythonSdk": undefined,
        "rubySdk": undefined,
        "typescriptSdk": undefined,
      },
      "codeSamples": [],
      "description": undefined,
      "headers": {},
      "name": undefined,
      "path": "/movies/tt1234",
      "pathParameters": {
        "id": "tt1234",
      },
      "queryParameters": {},
      "requestBody": undefined,
      "requestBodyV3": undefined,
      "responseBody": "tt1234",
      "responseBodyV3": {
        "type": "json",
        "value": "tt1234",
      },
      "responseStatusCode": 404,
    },
  ],
  "headers": [],
  "id": "getMovie",
  "method": "GET",
  "migratedFromUrlSlugs": undefined,
  "name": "Get Movie",
  "originalEndpointId": "endpoint_imdb.getMovie",
  "path": {
    "parts": [
      {
        "type": "literal",
        "value": "/movies",
      },
      {
        "type": "literal",
        "value": "/",
      },
      {
        "type": "pathParameter",
        "value": "id",
      },
      {
        "type": "literal",
        "value": "",
      },
    ],
    "pathParameters": [
      {
        "description": undefined,
        "key": "id",
        "type": {
          "type": "id",
          "value": "type_imdb:MovieId",
        },
      },
    ],
  },
  "queryParameters": [],
  "request": undefined,
  "response": {
    "statusCode": undefined,
    "type": {
      "type": "reference",
      "value": {
        "type": "id",
        "value": "type_imdb:Movie",
      },
    },
  },
  "snippetTemplates": undefined,
  "urlSlug": "get-movie",
}
`;

exports[`converts to api reference node: subpackagesByLocator keys 1`] = `
[
  "__package__",
  "__package__.yml",
  "imdb",
  "imdb.yml",
  "trailers",
  "trailers.yml",
]
`;
